// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Flat Syntax simple schema 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "Test route",
        "operationId": "getIndex",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "message": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "message",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Success",
          },
        },
      },
    },
  },
  "tags": undefined,
}
`;

exports[`Flat Syntax custom type 1`] = `
{
  "components": {},
  "info": {
    "description": "Development documentation",
    "title": "Hono Documentation",
    "version": "0.0.0",
  },
  "openapi": "3.1.0",
  "paths": {
    "/": {
      "get": {
        "description": "Test route",
        "operationId": "getIndex",
        "responses": {
          "400": {
            "content": {
              "application/problem+json": {
                "schema": {
                  "properties": {
                    "error": {
                      "type": "string",
                    },
                  },
                  "required": [
                    "error",
                  ],
                  "type": "object",
                },
              },
            },
            "description": "Bad Request",
          },
        },
      },
    },
  },
  "tags": undefined,
}
`;
